fix: Low contrast colours on links

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,5 +27,4 @@ a {
 }
 
 .recipe-link {
-    color: rgba(240, 0, 10, 0.6);
-}
+    color:rgba(0, 0, 190, 0.8);
